# crossref-metadata-heurestics

./: .gitignore  abstract_language_detection.ipynb  author_sequence_issues.ipynb  detecting_initials_and_affiliations.ipynb  pyproject.toml  requirements.txt
data/input/: .gitattributes  01_raw_data.csv  02_cleaned_data.csv  cleaned_data.csv  phase2_sample.csv
data/output/: .gitattributes  03_author_issues_labeled.csv  03_labeled_data.csv  04_language_detection.csv
notebooks/: 01_sample_generating.ipynb  02_data_cleaning.ipynb  03_author_problems.ipynb  03_data_labeling.ipynb  04_language_detection.ipynb  05_names_and_affiliations.ipynb  detecting_initials_and_affiliations.ipynb  sample_generating.ipynb  visualizations_descriptives.ipynb
notebooks/.ipynb_checkpoints/: 01_sample_generating-checkpoint.ipynb  02.5_fetching_additional_records-checkpoint.ipynb  02_data_cleaning-checkpoint.ipynb  03_author_problems-checkpoint.ipynb  03_data_labeling-checkpoint.ipynb  04_language_detection-checkpoint.ipynb  05_names_and_affiliations-checkpoint.ipynb  stat_playground-checkpoint.ipynb
