[tool.poetry]
name = "crossref-metadata"
version = "0.1.0"
description = ""
authors = ["Dennis Donathan II <dennis.donathanii@protonmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "crossref_metadata"}]

[tool.poetry.dependencies]
python = "~3.10"
habanero = "1.2.2"
nltk = "3.7"
numpy = "1.23.5"
pandas = "1.5.1"
py3langid = "0.2.2"
regex = "2022.10.31"
tqdm = "4.64.1"
seaborn = "^0.12.2"
beautifulsoup4 = "^4.11.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20.1"
black = "22.6.0"
flake8 = "4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
